--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,48 @@ body{
   text-align:center;
   font-family: 'Anton', sans-serif;
   height: 90vh;
+  background-image: url("http://www.seekgif.com/download/abstract-magical-background-14597");
+  background-size: cover;
 }
+
+
 h1{
   text-decoration: underline;
-  font-size: 40px;
+  font-size: 60px;
+  text-decoration-color: gray;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
 }
+
+
+p{
+    /* background-color: coral; */
+    font-size: 30px;
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
+    margin-top: 7%;
+    margin-bottom: 2%;
+}
+
+input{
+    background-color: coral;
+    font-size: 30px;
+    color: white;
+    width: 50%;
+    text-align: center;
+}
+
+button{
+    margin: 0.1%;
+    background-color: black;
+    font-size: 20px;
+    color: white;
+}
+
+
+.bubble
+    {
+        position: absolute;
+        top: 32%;
+        left: 40%;
+    }
